test/cases/bad/bad066.lat
class A {

}

class B {

}

A foo(boolean x) {
    if (x) {
        return new B;
    } else {
        return null;
    }
}

int main() {
    return 0;
}